storage/innobase/row/row0upd.cc
@@ -466,17 +466,15 @@ func_exit:
 @param[in]	node	query node
 @param[in]	trx	transaction
 @return	whether the node cannot be ignored */
-inline
-bool
-wsrep_must_process_fk(const upd_node_t* node, const trx_t* trx)
+
+inline bool wsrep_must_process_fk(const upd_node_t* node, const trx_t* trx)
 {
-	if (que_node_get_type(node->common.parent) != QUE_NODE_UPDATE
-	    || !wsrep_on_trx(trx)) {
+	if (!wsrep_on_trx(trx)) {
 		return false;
 	}
-
-	return static_cast<upd_node_t*>(node->common.parent)->cascade_node
-		== node;
+	return que_node_get_type(node->common.parent) != QUE_NODE_UPDATE
+		|| static_cast<upd_node_t*>(node->common.parent)->cascade_node
+		!= node;
 }
 #endif /* WITH_WSREP */
 
